# fixpoints

./: fixpoints.cabal
src/: Test.hs
src/Data/: Annotation.hs  Compose.hs  Constant.hs  Debug.hs  Fixpoint.hs  Identity.hs  Product.hs  Sum.hs  Tuples.hs
src/Data/List/: Abstract.hs  Algebras.hs  Pure.hs
src/Data/Monoid/: Bounds.hs
src/Data/Morphism/: Anamorphism.hs  Apomorphism.hs  Catamorphism.hs  Endoapomorphism.hs  Endoparamorphism.hs  Paramorphism.hs
src/Data/Tree/: Abstract.hs  Algebras.hs  Pure.hs
